--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,4 +18,15 @@ body {
   color: #8f8f8f;
 }
 
+.main-wrap{
+  font-size: 18px;
+  font-weight: bold;
+  .sub-key{
+    cursor: pointer;
+    margin: 10px 0 0 10px;
+  }
+  .sub-description{
+    margin-left: 30px;
+  }
+}
 
