Update - css 수정

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -19,14 +19,16 @@ body {
 }
 
 .main-wrap{
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bold;
+
   .sub-key{
     cursor: pointer;
-    margin: 10px 0 0 10px;
+    margin-left: 10px;
   }
+
   .sub-description{
-    margin-left: 30px;
+    margin: 0 0 10px 30px;
   }
 }
 
