--- a/src/containers/OnScreenObserver/OnScreenObserver.module.scss
+++ b/src/containers/OnScreenObserver/OnScreenObserver.module.scss
@@ -9,7 +9,7 @@
   width: 300px;
   height: 300px;
   border: 1px solid #fff;
-  background: #fff;
+  background: gray;
   margin-bottom: 20px;
   font-size: 20px;
   color: #000;
