--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,22 +12,52 @@
 html,
 body {
   width: 100%;
-  height: 100%;
-  background-color: #1e1e1e;
   line-height: 1.8;
-  color: #8f8f8f;
 }
 
-.main-wrap{
+.category {
+  font-size: 2rem;
+  margin: 10px 0;
+}
+
+.card-wrap {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 10px;
+
+  .card-item {
+    width: 300px;
+    background: #fff;
+    height: 150px;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: .3s all ease;
+    cursor: pointer;
+
+    .title {
+      font-weight: bold;
+    }
+
+    &:hover {
+      box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+      transition: .3s all ease;
+    }
+
+  }
+}
+
+
+.main-wrap {
   font-size: 16px;
   font-weight: bold;
 
-  .sub-key{
+  .sub-key {
     cursor: pointer;
     margin-left: 10px;
   }
 
-  .sub-description{
+  .sub-description {
     margin: 0 0 10px 30px;
   }
 }
